[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Anthony Hill", email="anthonyhilldeveloper@gmail.com" },
  { name="Brendon Hampton", email="Brendonhampton1988@gmail.com" },
  { name="Brian Tarte", email="brianjtarte@gmail.com" },
  { name="Ibraheem Ibraheem", email="iibraheem2001@gmail.com" },
]
description = "father-humor is a PIP package that you can install to utilize the built-in import method and render dad jokes directly to your terminal or your project's front-end deployment."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"